opam-version: "1.2"
maintainer: "KC Sivaramakrishnan <sk826@cl.cam.ac.uk>"
authors: ["KC Sivaramakrishnan <sk826@cl.cam.ac.uk>"]
homepage: "https://github.com/kayceesrk/ocaml-aeio"
doc: "https://kayceesrk.github.io/ocaml-aeio/doc"
license: "ISC"
dev-repo: "https://github.com/kayceesrk/ocaml-aeio.git"
bug-reports: "https://github.com/kayceesrk/ocaml-aeio/issues"
tags: []
version: "0.3.0"
available: [ ocaml-version >= "4.10.0"]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "lwt"
  "lwt-dllist"
]
depopts: []
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
